redis failover and health

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# JOOQ properties
+spring.jooq.sql-dialect=POSTGRES
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+# Redis Retry Configuration
+spring.retry.max-attempts=3
+spring.retry.initial-interval=1000
+spring.retry.multiplier=1.1
+spring.retry.max-interval=5000
