--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.2.2</version>
         <relativePath/>
     </parent>
     <groupId>com.notification</groupId>
@@ -63,6 +63,31 @@
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.jooq</groupId>
+	        <artifactId>jooq</artifactId>
+	        <version>3.18.0</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.jooq</groupId>
+	        <artifactId>jooq-meta</artifactId>
+	        <version>3.18.0</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.jooq</groupId>
+	        <artifactId>jooq-codegen</artifactId>
+	        <version>3.18.0</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.retry</groupId>
+		    <artifactId>spring-retry</artifactId>
+		</dependency>
+		
     </dependencies>
 
     <build>
